--- a/storefront-site/html/products/product12.html
+++ b/storefront-site/html/products/product12.html
@@ -52,15 +52,15 @@
     <div class="product">
         <div class="grid-container">
             <div class="grid-item" style="width: 256px; height: 256px; align-self: start;">
-                <img src="../../images/product12.png" style="max-width: 256px; max-height: 256px;">
+                <img style="max-width: 256px; max-height: 256px;" id="product-listing-image">
             </div>
             <div class="grid-item">
                 <h3>
-                    <span style="font-size: 1.2em;">Glowsticks (6 ct)</span>
+                    <span style="font-size: 1.2em;" id="product-listing-name">&ZeroWidthSpace;</span>
                     <br>
                     <br>
-                    <p class="stars">Rating: ★★★★☆</p>
-                    <p class="stock"><b>In Stock</b></p>
+                    <p class="stars" id="product-listing-rating">Rating:</p>
+                    <p class="stock" id="product-listing-stock">&ZeroWidthSpace;</p>
                     <label for="product-quantity">Qty: </label>
                     <select class="quantity" id="product-quantity" name="product-quantity">
                         <option value="1" selected>1</option>
@@ -69,16 +69,12 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;"><s>$3.99</s> $1.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;" id="product-listing-price"></span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
-                        <ul>
-                            <li>SAFE AND ECO-FRIENDLY: Using the most innovative industrial grade construction technique, these glow sticks are waterproof, non-flammable and have a non-toxic chemistry. This means they guarantee a long lasting and environmentally friendly option for lighting up your party.</li>
-                            <li>PREMIUM QUALITY: These Ultra Bright Glow Sticks are made from industrial grade construction which uses a perfect blend of premium materials to provide you Non-Toxic, waterproof and CPSIA Compliant party glow sticks that assures a lasting use of up to 12 hours, more fun and 100% safety.</li>
-                            <li>OUR QUALITY PROMISE: We have made these glow sticks from premium materials using industrial grade construction to provide you a distinctive party supply that lights up your special event with safety in mind. So, we are sure you will love the effect this sticks will have on your party.</li>
-                        </ul>
+                        <ul id="product-listing-description"></ul>
                     </div>
                 </p>
             </div>
@@ -91,10 +87,10 @@
         <br>
         <h2>Other Products:</h2>
         <div class="other-products">
-            <div><a href="./product10.html"><img src="../../images/product10.png" style="max-width: 128px; max-height: 128px;"></a></div>
-            <div><a href="./product11.html"><img src="../../images/product11.png" style="max-width: 128px; max-height: 128px;"></a></div>
-            <div><a href="./product13.html"><img src="../../images/product13.png" style="max-width: 128px; max-height: 128px;"></a></div>
-            <div><a href="./product14.html"><img src="../../images/product14.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product15.html"><img src="../../images/product15.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product16.html"><img src="../../images/product16.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product2.html"><img src="../../images/product2.png" style="max-width: 128px; max-height: 128px;"></a></div>
+            <div><a href="./product3.html"><img src="../../images/product3.png" style="max-width: 128px; max-height: 128px;"></a></div>
         </div>
     </div>
     <!-- BEGIN FOOTER -->
@@ -135,6 +131,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
+    <script src="../../scripts/product.js"></script>
 </body>
 
 </html>
