--- a/storefront-site/html/products/product15.html
+++ b/storefront-site/html/products/product15.html
@@ -131,7 +131,7 @@
         </nav>
     </footer>
     <!-- END FOOTER -->
-    <script src="../../scripts/product.js"></script>
+    <script src="../../scripts/render-product-listing.js"></script>
 </body>
 
 </html>
